golden/error/parse_seq_invalid_terminator_comma.test
[let x = 32; x; 10]

# output:
 --> stdin:1:14
  |
1 | [let x = 32; x; 10]
  |               ^
Error: Expected ',' instead of ';' here.
